# embed

./: README.md  meson.build
.github/workflows/: build_all.yml
examples/: hello.c  meson.build
src/: main.c  meson.build
